--- a/NumPy_Assignment2.ipynb
+++ b/NumPy_Assignment2.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "import numpy as np"
    ]
   },
   {
@@ -33,7 +33,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "sequence_15 = np.linspace(start=-5.0, stop=5.0, num=15)\n",
+    "\n",
+    "print(sequence_15)"
    ]
   },
   {
@@ -59,7 +61,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "arr1 = np.array([1.1, 2.1, 3.1])\n",
+    "arr2 = np.array([4.1, 5.1, 6.1])\n",
+    "arr3 = np.array([7.1, 8.1, 9.1])\n",
+    "arr4 = np.array([10.1, 11.1, 12.1])\n",
+    "\n",
+    "dim_3 = np.array([\n",
+    "    [arr1, arr2],\n",
+    "    [arr3, arr4]\n",
+    "])\n",
+    "\n",
+    "print(dim_3)"
    ]
   },
   {
@@ -83,7 +95,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "print(type(dim_3))\n",
+    "print(dim_3.dtype)\n",
+    "print(dim_3.shape)\n",
+    "print(dim_3.size)\n",
+    "print(dim_3.ndim)"
    ]
   },
   {
@@ -104,7 +120,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "dim_4 = dim_3.reshape((1, 2, 2, 3))\n",
+    "\n",
+    "print(dim_4.ndim)\n",
+    "print(dim_4.shape)"
    ]
   },
   {
@@ -126,7 +145,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "int_arr = dim_4.astype(int)\n",
+    "\n",
+    "print(int_arr)"
    ]
   },
   {
@@ -147,7 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "for n in np.nditer(int_arr):\n",
+    "    print(n)"
    ]
   },
   {
@@ -166,7 +188,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "ind_8 = np.where(dim_4 == 8)\n",
+    "print(ind_8)\n",
+    "num_8 = dim_4[ind_8]\n",
+    "print(num_8)\n",
+    "\n",
+    "#####\n",
+    "print(int_arr[0,1,0,1])"
    ]
   },
   {
@@ -185,7 +213,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "ind_5 = np.where(int_arr == 5)\n",
+    "print(ind_5)\n",
+    "num_5 = int_arr[ind_5]\n",
+    "print(num_5)\n",
+    "\n",
+    "ind_6 = np.where(int_arr == 6)\n",
+    "print(ind_6)\n",
+    "num_6 = int_arr[ind_6]\n",
+    "print(num_6)\n",
+    "\n",
+    "####\n",
+    "print(int_arr[0, 0, 1, 1])\n",
+    "print(int_arr[0, 0, 1, 2])"
    ]
   },
   {
@@ -208,7 +248,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "ind_8 = np.where(int_arr == 8)\n",
+    "\n",
+    "for index in zip(*ind_8):\n",
+    "    print(index)"
    ]
   },
   {
@@ -236,7 +279,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "reshape = int_arr.reshape((2, 3, 2))\n",
+    "\n",
+    "print(reshape)"
    ]
   },
   {
@@ -257,7 +302,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "arr1 = np.array([['A', 'B'], ['E', 'F']])\n",
+    "arr2 = np.array([['C', 'D'], ['G', 'H']])\n",
+    "\n",
+    "joined = np.vstack((arr1, arr2))\n",
+    "#joined = np.concatenate((arr1, arr2))\n",
+    "\n",
+    "print(joined)"
    ]
   },
   {
@@ -275,7 +326,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "joined = np.concatenate((arr1, arr2), axis=1)\n",
+    "\n",
+    "print(joined)"
    ]
   },
   {
@@ -294,7 +347,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write your code here ^_^"
+    "array = np.array([['A', 'B', 'C', 'D'],\n",
+    "                 ['E', 'F', 'G', 'H']])\n",
+    "split_arr = np.hsplit(array, 2)\n",
+    "\n",
+    "print(\"First\")\n",
+    "print(split_arr[0])\n",
+    "print(\"Second\")\n",
+    "print(split_arr[1])"
    ]
   }
  ],
