--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "212fd1ba",
    "metadata": {},
    "outputs": [],
@@ -20,12 +20,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3307454f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "x = np.array([1])\n",
+    "print(x)"
    ]
   },
   {
@@ -38,12 +47,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9550b063",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "y = np.array([0])\n",
+    "print(y)"
    ]
   },
   {
@@ -56,12 +74,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "71070d1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "xy = x+y\n",
+    "print(xy)"
    ]
   },
   {
@@ -74,12 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "32627c83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of array dimensions: 1\n",
+      "Tuple of array dimensions: (1,)\n",
+      "Number of elements in the array: 1\n",
+      "Data-type of the array’s elements: int32\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(f\"Number of array dimensions: {x.ndim}\")\n",
+    "print(f\"Tuple of array dimensions: {x.shape}\")\n",
+    "print(f\"Number of elements in the array: {x.size}\")\n",
+    "print(f\"Data-type of the array’s elements: {x.dtype}\")"
    ]
   },
   {
@@ -98,12 +139,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "b9c7bbb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 2)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[11, 12],\n",
+       "       [13, 14],\n",
+       "       [15, 16]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "w = np.array([[11,12],[13,14],[15,16]])\n",
+    "print(w.shape)\n",
+    "w"
    ]
   },
   {
@@ -116,12 +179,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "cee8aba0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "z = np.arange(1,4)\n",
+    "z"
    ]
   },
   {
@@ -134,12 +209,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "d218f892",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12  1]\n",
+      " [13 14  2]\n",
+      " [15 16  3]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "newArray = np.hstack((w,np.reshape(z,(3,1))))\n",
+    "print(newArray)"
    ]
   },
   {
@@ -152,12 +238,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "abbed923",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n",
+      "12\n",
+      "1\n",
+      "13\n",
+      "14\n",
+      "2\n",
+      "15\n",
+      "16\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "for row in newArray:\n",
+    "    for element in row:\n",
+    "        print(element)"
    ]
   },
   {
@@ -170,12 +274,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "12e3f0db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "old:  [[15 16  3]\n",
+      " [13 14  2]\n",
+      " [11 12  1]]\n",
+      "\n",
+      "new:  [[11 12  1]\n",
+      " [13 14  2]\n",
+      " [15 16  3]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(\"old: \", newArray)\n",
+    "\n",
+    "# this should reverse the array\n",
+    "newArray= newArray[::-1]\n",
+    "\n",
+    "print(\"\\nnew: \", newArray)"
    ]
   },
   {
@@ -188,12 +311,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "aea004df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10 11  0]\n",
+      " [12 13  1]\n",
+      " [14 15  2]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "newArray -= 1\n",
+    "\n",
+    "print(newArray)"
    ]
   },
   {
@@ -206,12 +341,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "4ea08613",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "biggest number in newArray array is: 15\n",
+      "smallest number in newArray array is: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(f\"biggest number in newArray array is: {newArray.max()}\")\n",
+    "\n",
+    "print(f\"smallest number in newArray array is: {newArray.min()}\")"
    ]
   },
   {
@@ -224,12 +370,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "73e3b5a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12 13  1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "print(newArray[1][:]) # [:] could be removed"
    ]
   },
   {
@@ -242,12 +396,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "7ad660b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "'''\n",
+    "newArray =\n",
+    "\n",
+    "   0  1   2\n",
+    "0 [10 11  0]\n",
+    "1 [12 13  1] < [1] 1\n",
+    "2 [14 15  2]\n",
+    "   ^\n",
+    "  [0] 2\n",
+    "'''\n",
+    "\n",
+    "print(newArray[1][0])"
    ]
   },
   {
@@ -260,12 +433,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "31fb5fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "'''\n",
+    "newArray =\n",
+    "\n",
+    "   0  1   2\n",
+    "0 [10 11  0] < [0] 1\n",
+    "1 [12 13  1] \n",
+    "2 [14 15  2]\n",
+    "          ^\n",
+    "         [2] 2\n",
+    "'''\n",
+    "\n",
+    "print(newArray[0][2])"
    ]
   },
   {
@@ -278,12 +470,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "35f224ad",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10]\n",
+      " [11]\n",
+      " [ 0]\n",
+      " [12]\n",
+      " [13]\n",
+      " [ 1]\n",
+      " [14]\n",
+      " [15]\n",
+      " [ 2]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "newArray = newArray.reshape(9,1)\n",
+    "print(newArray)"
    ]
   },
   {
@@ -291,17 +500,28 @@
    "id": "e6d104c5",
    "metadata": {},
    "source": [
-    "## Q#16: Change the shape of \"newArray\" to (3,2)."
+    "## Q#16: Change the shape of \"newArray\" to (3,3)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "724d51d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[10 11  0]\n",
+      " [12 13  1]\n",
+      " [14 15  2]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here ^_^"
+    "newArray = newArray.reshape(3,3)\n",
+    "print(newArray)"
    ]
   },
   {
@@ -329,7 +549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
