--- a/NumPy_Assignment1.ipynb
+++ b/NumPy_Assignment1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "212fd1ba",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "3307454f",
    "metadata": {},
    "outputs": [
@@ -28,12 +28,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]\n"
+      "[[1. 1.]\n",
+      " [1. 1.]]\n"
      ]
     }
    ],
    "source": [
-    "x = np.array([1])\n",
+    "x = np.ones([2,2])\n",
     "print(x)"
    ]
   },
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "9550b063",
    "metadata": {},
    "outputs": [
@@ -55,12 +56,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\n"
+      "[[0. 0.]\n",
+      " [0. 0.]]\n"
      ]
     }
    ],
    "source": [
-    "y = np.array([0])\n",
+    "y = np.zeros([2,2])\n",
     "print(y)"
    ]
   },
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "71070d1d",
    "metadata": {},
    "outputs": [
@@ -82,7 +84,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1]\n"
+      "[[1. 1.]\n",
+      " [1. 1.]]\n"
      ]
     }
    ],
@@ -101,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "32627c83",
    "metadata": {},
    "outputs": [
@@ -109,10 +112,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of array dimensions: 1\n",
-      "Tuple of array dimensions: (1,)\n",
-      "Number of elements in the array: 1\n",
-      "Data-type of the array’s elements: int32\n"
+      "Number of array dimensions: 2\n",
+      "Tuple of array dimensions: (2, 2)\n",
+      "Number of elements in the array: 4\n",
+      "Data-type of the array’s elements: float64\n"
      ]
     }
    ],
@@ -139,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "id": "b9c7bbb0",
    "metadata": {},
    "outputs": [
@@ -158,7 +161,7 @@
        "       [15, 16]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "id": "cee8aba0",
    "metadata": {},
    "outputs": [
@@ -189,7 +192,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "id": "d218f892",
    "metadata": {},
    "outputs": [
@@ -224,7 +227,8 @@
     }
    ],
    "source": [
-    "newArray = np.hstack((w,np.reshape(z,(3,1))))\n",
+    "z = np.reshape(z,(3,1))\n",
+    "newArray = np.hstack((w,z))\n",
     "print(newArray)"
    ]
   },
@@ -238,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 43,
    "id": "abbed923",
    "metadata": {},
    "outputs": [
@@ -274,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "id": "12e3f0db",
    "metadata": {},
    "outputs": [
@@ -282,13 +286,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "old:  [[15 16  3]\n",
+      "old:  [[11 12  1]\n",
       " [13 14  2]\n",
-      " [11 12  1]]\n",
+      " [15 16  3]]\n",
       "\n",
-      "new:  [[11 12  1]\n",
-      " [13 14  2]\n",
-      " [15 16  3]]\n"
+      "new:  [[11 13 15]\n",
+      " [12 14 16]\n",
+      " [ 1  2  3]]\n"
      ]
     }
    ],
@@ -296,7 +300,7 @@
     "print(\"old: \", newArray)\n",
     "\n",
     "# this should reverse the array\n",
-    "newArray= newArray[::-1]\n",
+    "newArray= newArray.transpose()\n",
     "\n",
     "print(\"\\nnew: \", newArray)"
    ]
@@ -311,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 45,
    "id": "aea004df",
    "metadata": {},
    "outputs": [
@@ -319,9 +323,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[10 11  0]\n",
-      " [12 13  1]\n",
-      " [14 15  2]]\n"
+      "[[10 12 14]\n",
+      " [11 13 15]\n",
+      " [ 0  1  2]]\n"
      ]
     }
    ],
@@ -341,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 46,
    "id": "4ea08613",
    "metadata": {},
    "outputs": [
@@ -370,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 47,
    "id": "73e3b5a5",
    "metadata": {},
    "outputs": [
@@ -378,7 +382,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12 13  1]\n"
+      "[11 13 15]\n"
      ]
     }
    ],
@@ -396,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 49,
    "id": "7ad660b7",
    "metadata": {},
    "outputs": [
@@ -410,17 +414,17 @@
    ],
    "source": [
     "'''\n",
-    "newArray =\n",
+    "   newArray\n",
     "\n",
     "   0  1   2\n",
-    "0 [10 11  0]\n",
-    "1 [12 13  1] < [1] 1\n",
-    "2 [14 15  2]\n",
-    "   ^\n",
-    "  [0] 2\n",
+    "0 [10 12  14] < [0] 1\n",
+    "1 [11 13  15] \n",
+    "2 [ 0  1   2]\n",
+    "      ^\n",
+    "     [1] 2\n",
     "'''\n",
     "\n",
-    "print(newArray[1][0])"
+    "print(newArray[0][1])"
    ]
   },
   {
@@ -433,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 51,
    "id": "31fb5fd0",
    "metadata": {},
    "outputs": [
@@ -441,23 +445,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "equal 0: 0\n",
+      "equal 13: 13\n"
      ]
     }
    ],
    "source": [
     "'''\n",
-    "newArray =\n",
+    "   newArray\n",
     "\n",
     "   0  1   2\n",
-    "0 [10 11  0] < [0] 1\n",
-    "1 [12 13  1] \n",
-    "2 [14 15  2]\n",
-    "          ^\n",
-    "         [2] 2\n",
+    "0 [10 12  14]\n",
+    "1 [11 13  15] < [1] b1\n",
+    "2 [ 0  1   2] < [2] a1\n",
+    "   ^   ^\n",
+    "  [0] [1]\n",
+    "   a2  b2\n",
     "'''\n",
+    "# a\n",
+    "print(f\"equal 0: {newArray[2][0]}\")\n",
     "\n",
-    "print(newArray[0][2])"
+    "# b\n",
+    "print(f\"equal 13: {newArray[1][1]}\")"
    ]
   },
   {
@@ -470,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 52,
    "id": "35f224ad",
    "metadata": {},
    "outputs": [
@@ -479,13 +488,13 @@
      "output_type": "stream",
      "text": [
       "[[10]\n",
-      " [11]\n",
-      " [ 0]\n",
       " [12]\n",
-      " [13]\n",
-      " [ 1]\n",
       " [14]\n",
+      " [11]\n",
+      " [13]\n",
       " [15]\n",
+      " [ 0]\n",
+      " [ 1]\n",
       " [ 2]]\n"
      ]
     }
@@ -505,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 53,
    "id": "724d51d5",
    "metadata": {},
    "outputs": [
@@ -513,9 +522,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[10 11  0]\n",
-      " [12 13  1]\n",
-      " [14 15  2]]\n"
+      "[[10 12 14]\n",
+      " [11 13 15]\n",
+      " [ 0  1  2]]\n"
      ]
     }
    ],
